refactor: update to latest vue3/typescript

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.png" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>SamaTech</title>
-  <meta property="og:title" content="SamaTech">
-  <meta property="og:url" content="https://samtech.tw">
-  <meta property="og:type" content="samatech:site">
-  <meta property="twitter:site" content="@samatechtw">
-  <meta property="twitter:description" content="SamaTech home page">
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:title" content="SamaTech">
-  <meta property="twitter:url" content="https://samtech.tw">
-</head>
-<body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.png" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>SamaTech</title>
+    <meta property="og:title" content="SamaTech" />
+    <meta property="og:url" content="https://samtech.tw" />
+    <meta property="og:type" content="samatech:site" />
+    <meta property="twitter:site" content="@samatechtw" />
+    <meta property="twitter:description" content="SamaTech home page" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="SamaTech" />
+    <meta property="twitter:url" content="https://samtech.tw" />
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
